--- a/Acembly.Ftx/package.json
+++ b/Acembly.Ftx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "acembly",
   "version": "0.1.0",
   "private": true,
   "description": "Acembly.Ftx",
@@ -9,10 +9,21 @@
   "scripts": {
     "postinstall": "install-app-deps",
     "start": "NODE_ENV=development && electron .",
-    "clean": "rimraf ./publish && mkdir publish && rimraf ./build && mkdir build",
-    "publish-mac": "dotnet publish -c release --self-contained -r osx.10.11-x64 --output bin/build/mac",
-    "publish-win": "dotnet publish -c release --self-contained -r win10-x64 --output bin/build/win",
-    "dist": "publish-mac && build"
+    "clean-mac": "rimraf bin/publish/mac && rimraf bin/build/mac",
+    "clean-win": "rimraf bin/publish/win-unpacked && rimraf bin/build/win",
+    "clean": "rimraf bin/publish && rimraf bin/build",
+    
+    "build-mac": "dotnet publish -c release --self-contained -r osx.10.11-x64 --output bin/build/mac",
+    "build-win": "dotnet publish -c release --self-contained -r win10-x64 --output bin/build/win",
+    "build": "npm-run-all build-mac build-win",
+    
+    "pack": "electron-builder -mw",
+    "pack-mac": "electron-builder --mac",
+    "pack-win": "electron-builder --win",
+    
+    "publish-mac": "npm-run-all clean-mac build-mac pack-mac",
+    "publish-win": "npm-run-all clean-win build-win pack-win",
+    "publish": "npm-run-all clean build pack"
   },
   "dependencies": {
     "electron-debug": "^2.1.0",
@@ -20,7 +31,8 @@
   },
   "devDependencies": {
     "electron": "^4.0.4",
-    "electron-builder": "^20.38.5"
+    "electron-builder": "^20.38.5",
+    "npm-run-all": "^4.1.5"
   },
   "build": {
     "appId": "acembly-ftx",
