--- a/Acembly.Ftx/package.json
+++ b/Acembly.Ftx/package.json
@@ -9,21 +9,22 @@
   "scripts": {
     "postinstall": "install-app-deps",
     "start": "NODE_ENV=development && electron .",
+
+    "clean": "rimraf bin/publish && rimraf bin/build",
     "clean-mac": "rimraf bin/publish/mac && rimraf bin/build/mac",
     "clean-win": "rimraf bin/publish/win-unpacked && rimraf bin/build/win",
-    "clean": "rimraf bin/publish && rimraf bin/build",
     
+    "build": "npm-run-all build-mac build-win",
     "build-mac": "dotnet publish -c release --self-contained -r osx.10.11-x64 --output bin/build/mac",
     "build-win": "dotnet publish -c release --self-contained -r win10-x64 --output bin/build/win",
-    "build": "npm-run-all build-mac build-win",
     
     "pack": "electron-builder -mw",
     "pack-mac": "electron-builder --mac",
     "pack-win": "electron-builder --win",
-    
+
+    "publish": "npm-run-all clean build pack",
     "publish-mac": "npm-run-all clean-mac build-mac pack-mac",
-    "publish-win": "npm-run-all clean-win build-win pack-win",
-    "publish": "npm-run-all clean build pack"
+    "publish-win": "npm-run-all clean-win build-win pack-win"
   },
   "dependencies": {
     "electron-debug": "^2.1.0",
@@ -32,7 +33,8 @@
   "devDependencies": {
     "electron": "^4.0.4",
     "electron-builder": "^20.38.5",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "node-sass": "^4.11.0"
   },
   "build": {
     "appId": "acembly-ftx",
