Add axios and API class

--- a/Acembly.Ftx/Acembly.Ftx.csproj
+++ b/Acembly.Ftx/Acembly.Ftx.csproj
@@ -22,6 +22,8 @@
     <ItemGroup>
         <!-- Don't publish the SPA source files, but do show them in the project files list -->
         <Content Remove="$(SpaRoot)**" />
+        <Content Include="ui\src\API.js" />
+        <Content Include="ui\src\http.js" />
         <None Remove="$(SpaRoot)**" />
         <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
     </ItemGroup>
