--- a/Acembly.Ftx/ui/package.json
+++ b/Acembly.Ftx/ui/package.json
@@ -12,11 +12,15 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "antd": "^3.13.3",
+    "axios": "^0.18.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "@aspnet/signalr": "^1.1.2"
+  },
+  "devDependencies": {
     "react-scripts": "2.1.3"
   },
-  "devDependencies": {},
   "eslintConfig": {
     "extends": "react-app"
   },
