--- a/Acembly.Ftx/Acembly.Ftx.csproj
+++ b/Acembly.Ftx/Acembly.Ftx.csproj
@@ -15,8 +15,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="GlobalExceptionHandler" Version="4.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+        <PackageReference Include="Polly" Version="7.0.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
     </ItemGroup>
 
     <ItemGroup>
