Add env variables fixe

--- a/.gitignore
+++ b/.gitignore
@@ -333,3 +333,6 @@ ASALocalRun/
 # Local History for Visual Studio
 .localhistory/
 package-lock.json
+Acembly.Ftx/ui/package-lock.json
+Acembly.Ftx/ui/package-lock.json
+Acembly.Ftx/package-lock.json
