--- a/Acembly.Ftx/Properties/launchSettings.json
+++ b/Acembly.Ftx/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "REACT_APP_API_URL": "https://localhost:5000/api"
+        "REACT_APP_API_URL": "https://localhost:5000"
       }
     },
     "Acembly.Ftx": {
@@ -22,7 +22,7 @@
       "applicationUrl": "https://localhost:5000;http://localhost:3000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "REACT_APP_API_URL": "https://localhost:5000/api"
+        "REACT_APP_API_URL": "https://localhost:5000"
       }
     }
   }
