--- a/Acembly.Ftx/ui/package.json
+++ b/Acembly.Ftx/ui/package.json
@@ -7,7 +7,7 @@
   "repository": "",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env REACT_APP_IS_DEBUG=false REACT_APP_API_URL=  react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -19,7 +19,8 @@
     "@aspnet/signalr": "^1.1.2"
   },
   "devDependencies": {
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "cross-env": "^5.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
