--- a/.gitignore
+++ b/.gitignore
@@ -332,7 +332,27 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
-package-lock.json
-Acembly.Ftx/ui/package-lock.json
-Acembly.Ftx/ui/package-lock.json
-Acembly.Ftx/package-lock.json
+*.lock
+*.package-lock.json
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
