--- a/src/package.json
+++ b/src/package.json
@@ -7,24 +7,20 @@
   "repository": "",
   "main": "desktop.js",
   "scripts": {
-    "postinstall": "install-app-deps",
-    "start": "NODE_ENV=development && electron .",
-
+    "postinstall": "electron-builder install-app-deps",
+    "start": "cross-env NODE_ENV=development && electron .",
     "clean": "npm-run-all clean-ui && rimraf bin/publish && rimraf bin/build",
     "clean-mac": "rimraf bin/publish/mac && rimraf bin/build/mac",
     "clean-win": "rimraf bin/publish/win-unpacked && rimraf bin/build/win",
     "clean-ui": "rimraf ui/build/*",
-    
     "build": "npm-run-all build-mac build-win",
     "build-mac": "dotnet publish -c release -o bin/build/mac /p:TrimUnusedDependencies=true -r osx.10.11-x64",
     "build-win": "dotnet publish -c release -o bin/build/win /p:TrimUnusedDependencies=true -r win10-x64",
     "build-ui": "cd ui && npm run build",
     "add this to build when linker bug is fixed": "/p:LinkDuringPublish=true /p:ShowLinkerSizeComparison=true",
-    
     "pack": "electron-builder -mw",
     "pack-mac": "electron-builder --mac",
     "pack-win": "electron-builder --win",
-    
     "publish": "npm-run-all clean build pack",
     "publish-mac": "npm-run-all clean-mac build-mac pack-mac",
     "publish-win": "npm-run-all clean-win build-win pack-win"
@@ -34,11 +30,13 @@
     "electron-is-dev": "^1.0.1"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "electron": "^4.0.4",
     "electron-builder": "^20.38.5",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
-    "node-sass": "^4.11.0",
-    "cross-env": "^5.2.0"
+    "browserslist": "^4.12.0",
+    "caniuse-lite": "^1.0.30001055"
   },
   "build": {
     "appId": "acembly-ftx",
@@ -76,10 +74,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
