--- a/src/NetCoreReact/UI/public/manifest.json
+++ b/src/NetCoreReact/UI/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React Core",
-  "name": "React Core Sample App",
+  "short_name": "NetCore React",
+  "name": "NetCore React Sample App",
   "icons": [
     {
       "src": "favicon.ico",
