--- a/src/NetCoreReact/UI/package.json
+++ b/src/NetCoreReact/UI/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "react.core",
+  "name": "netcore.react",
   "version": "0.1.0",
-  "private": true,
-  "description": "React Core",
   "author": "Halid Cisse",
-  "repository": "",
+  "private": true,
   "scripts": {
-    "start": "cross-env REACT_APP_API_URL=http://localhost:5000 rimraf ./build && react-scripts start",
-    "build": "cross-env REACT_APP_IS_DEBUG=false REACT_APP_API_URL=http://localhost:5000 react-scripts build",
+    "start": "SET REACT_APP_IS_DEBUG=false&& SET REACT_APP_API_URL=http://localhost:5000&& rimraf ./build&& react-scripts start",
+    "build": "SET REACT_APP_IS_DEBUG=false&& REACT_APP_API_URL=http://localhost:5000&& rimraf ./build&& react-scripts build",
     "lint": "eslint ./src/"
   },
   "dependencies": {
-    "@aspnet/signalr": "^1.1.2",
+    "@microsoft/signalr": "^3.1.3",
     "antd": "^3.13.3",
     "axios": "^0.18.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
     "bootstrap": "^4.1.3",
+    "electron-debug": "^2.1.0",
+    "electron-is-dev": "^1.0.1",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
+    "node-sass": "^4.14.1",
     "oidc-client": "^1.9.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
@@ -27,10 +28,15 @@
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
-    "browserslist": "^4.12.0",
-    "caniuse-lite": "^1.0.30001055",
+    "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "react-scripts": "2.1.3"
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "typescript": "^3.7.5"
   },
   "eslintConfig": {
     "extends": "react-app"
