--- a/src/NetCoreReact/Properties/launchSettings.json
+++ b/src/NetCoreReact/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "R": {
+    "NetCoreReact": {
       "commandName": "Project",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
