--- a/src/NetCoreReact/UI/package.json
+++ b/src/NetCoreReact/UI/package.json
@@ -5,38 +5,25 @@
   "private": true,
   "scripts": {
     "start": "SET REACT_APP_IS_DEBUG=false&& SET REACT_APP_API_URL=http://localhost:5000&& rimraf ./build&& react-scripts start",
-    "build": "SET REACT_APP_IS_DEBUG=false&& REACT_APP_API_URL=http://localhost:5000&& rimraf ./build&& react-scripts build",
+    "build": "SET REACT_APP_IS_DEBUG=false&& SET REACT_APP_API_URL=http://localhost:5000&& rimraf ./build&& react-scripts build",
     "lint": "eslint ./src/"
   },
   "dependencies": {
-    "@microsoft/signalr": "^3.1.3",
-    "antd": "^3.13.3",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
-    "electron-debug": "^2.1.0",
-    "electron-is-dev": "^1.0.1",
-    "jquery": "^3.4.1",
+    "@microsoft/signalr": "^3.1.4",
+    "antd": "^4.2.3",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "merge": "^1.2.1",
-    "node-sass": "^4.14.1",
-    "oidc-client": "^1.9.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "ajv": "^6.9.1",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "typescript": "^3.7.5"
+    "node-sass": "^4.14.1"
   },
   "eslintConfig": {
     "extends": "react-app"
