--- a/src/NetCoreReact/package.json
+++ b/src/NetCoreReact/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "electron-debug": "^3.0.1",
     "electron-is-dev": "^1.2.0",
-    "debug-menu": "0.6.1"
+    "electron-unhandled": "3.0.2",
+    "electron-store": "5.1.1",
+    "electron-timber": "0.5.1"
   },
   "devDependencies": {
     "electron": "^8.3.0",
